[gd_scene load_steps=10 format=3 uid="uid://d08br8oesht4c"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_k1vnl"]
[ext_resource type="FontFile" uid="uid://bv4tuee5qf2uf" path="res://assets/fonts/ROADSTORE Dafont.otf" id="2_sn4cx"]
[ext_resource type="FontFile" uid="uid://fkqevbj0nxll" path="res://assets/fonts/Heavitas.ttf" id="3_b6lfp"]
[ext_resource type="PackedScene" uid="uid://cbvkp32thgw32" path="res://scenes/how_to_play_panel.tscn" id="4_7oe1i"]

[sub_resource type="Gradient" id="Gradient_7b167"]
offsets = PackedFloat32Array(0, 0.896104, 1)
colors = PackedColorArray(0.623529, 0, 0, 1, 0.223529, 0, 0, 1, 0.188235, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uuy3w"]
gradient = SubResource("Gradient_7b167")
fill = 1
fill_from = Vector2(0.516619, 0.529915)

[sub_resource type="Animation" id="Animation_6nub3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nd3h1"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k67jp"]
_data = {
"RESET": SubResource("Animation_6nub3"),
"fade": SubResource("Animation_nd3h1")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k1vnl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_uuy3w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(900, 400)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.858824)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("2_sn4cx")
theme_override_font_sizes/font_size = 150
text = "BUCKSHOT ROULETTE"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_b6lfp")
theme_override_font_sizes/font_size = 100
text = "PLAY"

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = -100.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("3_b6lfp")
theme_override_font_sizes/font_size = 45
text = "how to 
play"

[node name="HowToPlayPanel" parent="." instance=ExtResource("4_7oe1i")]
layout_mode = 1

[node name="HowToPanelAnim3" type="AnimationPlayer" parent="HowToPlayPanel"]
libraries = {
"": SubResource("AnimationLibrary_k67jp")
}

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
